linux/etc/iptables/rules.v4
# Generated by iptables-save v1.4.21 on Thu Aug 23 10:12:13 2018
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
:Services - [0:0]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -m state --state INVALID -j DROP
-A INPUT -i lo -j ACCEPT
-A INPUT -s 192.168.1.0/24 -i eth0 -j Services
-A INPUT -s 10.0.0.0/8 -i eth0 -j DROP
-A INPUT -s 127.0.0.0/8 -i eth0 -j DROP
-A INPUT -s 172.16.0.0/12 -i eth0 -j DROP
-A INPUT -s 192.168.0.0/16 -i eth0 -j DROP
-A INPUT -s 224.0.0.0/4 -i eth0 -j DROP
-A INPUT -s 240.0.0.0/4 -i eth0 -j DROP
-A INPUT -m state --state NEW -j Services
-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -m state --state INVALID -j DROP
-A FORWARD -s 10.0.0.0/8 -i eth0 -j DROP
-A FORWARD -s 127.0.0.0/8 -i eth0 -j DROP
-A FORWARD -s 192.168.0.0/16 -i eth0 -j DROP
-A FORWARD -s 224.0.0.0/4 -i eth0 -j DROP
-A FORWARD -s 240.0.0.0/4 -i eth0 -j DROP
-A FORWARD -p icmp -j ACCEPT
-A FORWARD -i eth1 -p tcp -j ACCEPT
-A FORWARD -i eth1 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -m state --state INVALID -j DROP
-A OUTPUT -s 127.0.0.0/8 -d 127.0.0.0/8 -o lo -j ACCEPT
-A OUTPUT -p icmp -j ACCEPT
-A OUTPUT -m owner --uid-owner 0 -j ACCEPT
-A OUTPUT -m owner --uid-owner 106 -j ACCEPT
-A OUTPUT -m owner --uid-owner 109 -j ACCEPT
-A OUTPUT -p tcp -m tcp -m owner --uid-owner 1001 -m multiport --dports 80,443 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 587 -m owner --uid-owner 1001 -j ACCEPT
-A OUTPUT -j REJECT --reject-with icmp-port-unreachable
-A Services -p icmp -j ACCEPT
-A Services -i eth1 -p udp -m udp --dport 53 -j ACCEPT
-A Services -i eth1 -p udp -m udp --dport 67 -j ACCEPT
-A Services -i eth1 -p udp -m udp --dport 123 -j ACCEPT
-A Services -p tcp -m tcp --dport 22 -j ACCEPT
-A Services -p tcp -m multiport --dports 80,443 -j ACCEPT
-A Services -i eth1 -j REJECT --reject-with icmp-port-unreachable
COMMIT
# Completed on Thu Aug 23 10:12:13 2018
# Generated by iptables-save v1.4.21 on Thu Aug 23 10:12:13 2018
*nat
:PREROUTING ACCEPT [800:155313]
:INPUT ACCEPT [2:124]
:OUTPUT ACCEPT [184:15479]
:POSTROUTING ACCEPT [106:7599]
-A PREROUTING -p udp -m udp --dport 53 -j DNAT --to-destination 192.168.8.1
-A PREROUTING -p udp -m udp --dport 123 -j DNAT --to-destination 192.168.8.1
-A POSTROUTING -o eth0 -j MASQUERADE
COMMIT
# Completed on Thu Aug 23 10:12:13 2018
