linux/etc/iptables/rules.v6
# Generated by ip6tables-save v1.4.21 on Wed Oct 19 07:06:26 2016
*nat
:PREROUTING ACCEPT [756:83473]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [41:4779]
:POSTROUTING ACCEPT [28:2240]
COMMIT
# Completed on Wed Oct 19 07:06:26 2016
# Generated by ip6tables-save v1.4.21 on Wed Oct 19 07:06:26 2016
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
:Services - [0:0]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -m state --state INVALID -j DROP
-A INPUT -i lo -j ACCEPT
-A INPUT -s fe80::/10 -i ppp0 -p udp -m udp --dport 546 -j ACCEPT
-A INPUT -p ipv6-icmp -j ACCEPT
-A INPUT -m state --state NEW -j Services
-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -m state --state INVALID -j DROP
-A FORWARD -p ipv6-icmp -j ACCEPT
-A FORWARD -i eth1 -m state --state NEW -j ACCEPT
-A FORWARD -j REJECT --reject-with icmp6-port-unreachable
-A OUTPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -m state --state INVALID -j DROP
-A OUTPUT -s ::1/128 -d ::1/128 -o lo -j ACCEPT
-A OUTPUT -p ipv6-icmp -j ACCEPT
-A OUTPUT -o ppp0 -p udp -m udp --dport 546 -j ACCEPT
-A OUTPUT -m owner --uid-owner 0 -j ACCEPT
-A OUTPUT -m owner --uid-owner 106 -j ACCEPT
-A OUTPUT -m owner --uid-owner 109 -j ACCEPT
-A OUTPUT -p tcp -m tcp -m owner --uid-owner 1001 -m multiport --dports 80,443 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 587 -m owner --uid-owner 1001 -j ACCEPT
-A OUTPUT -j REJECT --reject-with icmp6-port-unreachable
-A Services -i eth1 -p udp -m udp --dport 53 -j ACCEPT
-A Services -i eth1 -p udp -m udp --dport 123 -j ACCEPT
-A Services -s fe80::/10 -i eth1 -p udp -m udp --dport 547 -j ACCEPT
-A Services -p tcp -m tcp --dport 22 -j ACCEPT
-A Services -p tcp -m multiport --dports 80,443 -j ACCEPT
-A Services -j REJECT --reject-with icmp6-port-unreachable
COMMIT
# Completed on Wed Oct 19 07:06:26 2016
